# ecss-mcp-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  doc_processing.py  document_cleanup.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: ecss-expert.agent.md
.github/skills/searching-ecss/: SKILL.md
.github/workflows/: ruff.yml
src/ecss_mcp/: __init__.py  main.py
src/ecss_mcp_server/: __init__.py  document_parser.py  document_reader.py  ecss_mcp_server.py  main.py
src/ecss_parser/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_document_parser.py  test_document_reader.py  test_ecss_mcp_server.py
